[project]
name = "rag-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.5",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sentence-transformers[train]>=4.1.0",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.7",
]
